--- a/VehicleMonitorPhone/app/src/main/res/values/strings.xml
+++ b/VehicleMonitorPhone/app/src/main/res/values/strings.xml
@@ -6,5 +6,11 @@
     <string name="register">注册</string>
     <string name="go_register">没有账号?这里注册</string>
     <string name="register_success">注册成功</string>
+    <string name="register_failure">注册失败</string>
     <string name="password_sure">确认密码</string>
+    <string name="menu_car">车辆</string>
+    <string name="menu_mine">我的</string>
+    <string name="model">车型：</string>
+    <string name="plate_number">车牌：</string>
+    <string name="brand">品牌：</string>
 </resources>
