--- a/VehicleMonitorPhone/app/src/main/res/values/strings.xml
+++ b/VehicleMonitorPhone/app/src/main/res/values/strings.xml
@@ -24,4 +24,16 @@
     <string name="speed">车速：</string>
     <string name="ml">ml</string>
     <string name="km_h">km/h</string>
+    <string name="plate_number_register">车牌号</string>
+    <string name="plate_brand_register">品牌</string>
+    <string name="plate_model_register">型号</string>
+    <string name="plate_device_id_register">汽车唯一编号（请前往车载端查看）</string>
+    <string name="vehicle_register_success">提交申请成功，请耐心等待审核通过</string>
+    <string name="vehicle_register_failure">提交申请失败，请稍后重试</string>
+    <string name="vehicle_register">登记</string>
+    <string name="message">消息中心</string>
+    <string name="code">源代码：</string>
+    <string name="github">https://github.com/Jihannn/VehicleMonitor</string>
+    <string name="version">版本号：v1.0.0</string>
+    <string name="logout">退出登录</string>
 </resources>
